--- a/style.css
+++ b/style.css
@@ -1,9 +1,72 @@
+@import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Boldonse&family=Cinzel:wght@400..900&family=Lemon&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Russo+One&display=swap');
+
 body{
-    background-color:#000000 ;
-    color:#DAA520;
-    margin: 0px;
-    margin-bottom: 100px;
-    f
+color:#ffcb6a ;
+background-color:#3d9741 ;
+margin: 0px;
+margin-bottom: 100px;
+}
 
+header{
+    border-bottom: solid 2px #fff678 ;
+    margin: 20px;
+    font-size: 32px;
+    color: rgb(92, 43, 43);
+}
 
+section{    
+padding-bottom: 80px;
+padding-top: 80px;
+background: rgb(112, 55, 55);
+display: flex;
+justify-content: center;
+}
+
+h1{
+color:#f5bc54 ;
+font-size: 40px;
+}
+
+p{
+    font-size: 20px;
+}
+
+.categoria{
+padding-left: 20px;
+padding-right: 20px;
+
+}
+
+.categoria-videos {
+    display: flex;
+    overflow-x: auto;
+    gap: 10px;
+}
+
+img{
+    height: 200px;
+}
+
+.categoria-videos img{
+    opacity: 0.5;
+    height: 200px;
+}
+
+.categoria-videos img:hover{
+opacity:1.0;
+border: 3px solid #ffcb6a;
+
+}
+
+.categoria h2{
+color: #ffc863;
+
+}
+
+.chamada-texto{
+    margin-right: 1%;
+    text-align: center;
+    padding: 20px;
+    background-color: #a56565;
+    color: #63450f;
 }
